--- a/src/styles.css
+++ b/src/styles.css
@@ -120,3 +120,37 @@ button, input, select, textarea {
     transform: scale(1);
 }
 
+.todoList__content__inner {
+    margin-bottom: 25px;
+}
+
+
+
+/*Button*/
+
+
+.todoList__button {
+    display: inline-block;
+    vertical-align: top;
+    padding: 10px 30px;
+    cursor: pointer;
+    font-size: 20px;
+    transition: background .1s linear;
+    background-color: #b3acac;
+}
+
+.todoList__button:hover {
+    background-color: #909090;
+}
+
+.todoList__button:hover a {
+    color: #2b2b2b;
+}
+
+.todoList__button a {
+    color: #6c717b;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+
