--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ button, input, select, textarea {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 420px;
-    height: 700px;
+    min-height: 700px;
     background: #dcdcdc;
     border-radius: 10px;
     box-shadow: 0 5px 20px rgba(62, 9, 11, .3);
@@ -155,7 +155,7 @@ button, input, select, textarea {
 }
 
 
-/*Modal*/
+/*ADD Modal*/
 
 .todoList__modal .todoList__modal__form {
     display: flex;
@@ -175,12 +175,14 @@ button, input, select, textarea {
     padding: 0 5px;
     font-weight: 700;
     font-size: 1.2rem;
-    color: #6c717b;
+    color: #1c1c1d;
     outline: none;
+    width: 100%;
 }
 
-.todoList__modal .todoList__modal__form_buttons a{
+.todoList__modal .todoList__modal__form_buttons a {
     text-decoration: none;
+    color: #1c1c1d;
 }
 
 .todoList__modal .todoList__modal__form_buttons i {
@@ -189,4 +191,8 @@ button, input, select, textarea {
     color: #8e979c;
 }
 
+
+.add__modal {
+    display: none;
+}
 
