--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,7 @@ button, input, select, textarea {
     background: #dcdcdc;
     border-radius: 10px;
     box-shadow: 0 5px 20px rgba(62, 9, 11, .3);
+    padding-bottom: 20px;
 }
 
 .todoList__img {
@@ -180,9 +181,13 @@ button, input, select, textarea {
     width: 100%;
 }
 
+.add__modal .todoList__modal__form [type='text'] {
+    color: #d4d4d4;
+    font-weight: 400;
+}
+
 .todoList__modal .todoList__modal__form_buttons a {
     text-decoration: none;
-    color: #1c1c1d;
 }
 
 .todoList__modal .todoList__modal__form_buttons i {
@@ -191,8 +196,16 @@ button, input, select, textarea {
     color: #8e979c;
 }
 
-
 .add__modal {
+    position: fixed;
+    width: 100%;
+    height: 70px;
+    /*top: 50%;*/
+    overflow-y: hidden;
+    overflow-x: hidden;
+    caret-color: transparent;
+    touch-action: none;
+    -ms-touch-action: none;
+    background: #262626;
     display: none;
 }
-
